[gd_scene load_steps=6 format=3 uid="uid://c4oce4qdpabpq"]

[ext_resource type="PackedScene" uid="uid://c8l60rnugru40" path="res://addons/godot-xr-tools/objects/pickable.tscn" id="1_bfy2c"]
[ext_resource type="Script" path="res://manualposemaker/puppetcontrol.gd" id="2_fq0i0"]

[sub_resource type="BoxShape3D" id="BoxShape3D_cchc3"]
size = Vector3(0.1, 0.3, 0.1)

[sub_resource type="BoxMesh" id="BoxMesh_88m1g"]
size = Vector3(0.2, 0.4, 0.2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jw3d8"]
resource_local_to_scene = true
transparency = 1
albedo_color = Color(0.977806, 0.552319, 0.864924, 0.486275)

[node name="PuppetControl" instance=ExtResource("1_bfy2c")]
collision_layer = 1048584
collision_mask = 196608
freeze = true
script = ExtResource("2_fq0i0")
bonecontrolname = "hand .L"
ranged_grab_method = 0

[node name="CollisionShape3D" parent="." index="0"]
shape = SubResource("BoxShape3D_cchc3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="." index="1"]
mesh = SubResource("BoxMesh_88m1g")
surface_material_override/0 = SubResource("StandardMaterial3D_jw3d8")

[connection signal="dropped" from="." to="." method="_on_dropped"]
[connection signal="highlight_updated" from="." to="." method="_on_highlight_updated"]
[connection signal="picked_up" from="." to="." method="_on_picked_up"]
